# Safi-UI-Mobile

./: .gitignore  LICENSE  PRD.md  README.md
.github/workflows/: ci.yml  release.yml
SafiUI/: Cargo.toml
SafiUI/examples/window-smoke/: Cargo.toml  TESTING.md
SafiUI/examples/window-smoke/android/: .gitignore  build.gradle.kts  build.sh  settings.gradle.kts
SafiUI/examples/window-smoke/android/app/: build.gradle.kts
SafiUI/examples/window-smoke/android/app/src/main/: AndroidManifest.xml
SafiUI/examples/window-smoke/android/app/src/main/kotlin/com/safiui/windowsmoke/: MainActivity.kt
SafiUI/examples/window-smoke/android/cmake/: android-arm64.toolchain.cmake
SafiUI/examples/window-smoke/assets/ui/screens/: smoke.xml
SafiUI/examples/window-smoke/ios/: .gitignore  README.md  build.sh
SafiUI/examples/window-smoke/ios/Sources/: Info.plist  SafiUI-Bridging-Header.h  WindowSmoke.swift
SafiUI/examples/window-smoke/ios/WindowSmoke.xcodeproj/: project.pbxproj
SafiUI/examples/window-smoke/src/: app.rs  lib.rs
SafiUI/safi-ui/: Cargo.toml  build.rs
SafiUI/safi-ui-macros/: Cargo.toml
SafiUI/safi-ui-macros/src/: codegen.rs  lib.rs  parse.rs
SafiUI/safi-ui/shaders/: rect.glsl  text.glsl
SafiUI/safi-ui/src/: app.rs  arena.rs  build.rs  clip.rs  commands.rs  component.rs  context.rs  debug_box.rs  dirty.rs  edge_insets.rs  events.rs  focus.rs  gestures.rs  lib.rs  parse.rs  props.rs  registry.rs  state.rs  vnode.rs
SafiUI/safi-ui/src/assets/: android.rs  dpi.rs  filesystem.rs  ios.rs  mock.rs  mod.rs
SafiUI/safi-ui/src/gpu/: batch.rs  mock.rs  mod.rs  sdl.rs
SafiUI/safi-ui/src/layout/: mod.rs  style.rs
SafiUI/safi-ui/src/text/: atlas.rs  mod.rs  shaper.rs
SafiUI/safi-ui/src/widgets/: button.rs  mod.rs  text.rs  view.rs
SafiUI/safi-ui/tests/: assets_filesystem.rs  assets_mock.rs  command_buffer.rs  component_lifecycle.rs  dirty_tracker.rs  dpi.rs  events.rs  gestures.rs  gpu_batching.rs  layout_perf.rs  parse_snapshots.rs  pipeline.rs  props.rs  registry.rs  state.rs  text_atlas.rs  ui_context.rs  vnode_macro.rs  vnode_macro_compile_fail.rs  widget_arena.rs  widgets.rs
SafiUI/safi-ui/tests/compile_fail/: bare_ident_prop.rs  bare_ident_prop.stderr  mismatched_close.rs  mismatched_close.stderr  mixed_text_and_child.rs  mixed_text_and_child.stderr  numeric_prop.rs  numeric_prop.stderr  unclosed.rs  unclosed.stderr
SafiUI/safi-ui/tests/fixtures/parse/: valid_screen.xml
SafiUI/scripts/: README.md  dev-android.sh  dev-ios.sh
docs/: package.json  rspress.config.ts
docs/docs/: _nav.json  index.md  status.md
docs/docs/api/: _meta.json  commands.mdx  index.mdx  macros.md
docs/docs/api/components/: _meta.json  data.md  display.md  index.md  input.md  layout.md  navigation.md  typography.md
docs/docs/api/core/: _meta.json  asset-loader.md  command-buffer.md  component-registry.md  component-trait.md  dirty-tracker.md  event-bus.md  gesture-recognizer.md  prop-utils.md  state-store.md  ui-context.md  vnode.md  widget-arena.md
docs/docs/guide/: _meta.json
docs/docs/guide/authoring/: _meta.json  prop-bindings.md  user-components.md  xml-syntax.md
docs/docs/guide/concepts/: _meta.json  command-buffer.md  dirty-tracking.md  error-handling.md  gestures-and-input.md  hot-reload.md  lifecycle.md  state-and-events.md  vnode-tree.md  widget-arena.md
docs/docs/guide/platform/: _meta.json  android.md  assets.md  fonts-and-text.md  images.md  ios.md  safe-area-and-keyboard.md
docs/docs/guide/start/: _meta.json  architecture.md  getting-started.md  introduction.md
docs/docs/guide/tooling/: cli.md
todos/: 00-repo-and-cargo-setup.md  01-ci-pipeline.md  02-sdl3-window-on-android-and-ios.md  03-vnode-and-vnode-macro.md  04-widget-arena.md  05-command-buffer.md  06-dirty-tracker-per-subtree.md  07-ui-context.md  08-gesture-recognizer.md  09-gpu-renderer-rect-and-text.md  10-taffy-layout-engine.md  11-xml-parser.md  12-asset-loader-and-dpi.md  13-component-trait-and-prop-utils.md  14-component-registry.md  15-base-widgets-view-text-button.md  16-font-atlas-fontdue-rustybuzz.md  17-image-pipeline-channel-based.md  18-built-in-components-layout-and-typography.md  19-built-in-components-input.md  20-built-in-components-display.md  21-built-in-components-navigation.md  22-built-in-components-data-card-table-emptystate.md  23-state-store.md  24-event-bus-main-thread-and-post-async.md  25-xml-template-components.md  26-flatlist-virtualization-and-reverse-infinite.md  27-platform-bridge-safe-area-keyboard-lifecycle.md  28-panic-isolation-and-crash-handler.md  29-hot-reload-seamless-state-preservation.md  30-c-ffi-and-cmake-interop.md  31-example-apps-hello-todo-dashboard.md  32-docs-and-oss-launch.md  33-cli-foundations-new-generate-doctor-dev-build-lint.md  34-cli-capstone-safi-preview.md  README.md
