[workspace]
resolver = "2"
members = [
    "safi-ui",
    "safi-ui-macros",
    # "examples/*" — added in todo 31 (example apps). Cargo errors on an
    # empty glob, so this line stays commented until the first example
    # crate lands.
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Abdul Kader Safi <safi.abdulkader@gmail.com>"]
repository = "https://github.com/AbdulKaderSafi/safi-ui"
homepage = "https://github.com/AbdulKaderSafi/safi-ui"
description = "Declarative XML-driven mobile UI framework in pure Rust"
rust-version = "1.95"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
