[package]
name = "safi-ui-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Proc-macros for safi-ui (vnode! and friends)"

[lib]
proc-macro = true

[dependencies]
# The proc-macro toolkit is wired up in todo 03.
# Kept empty here so todo 00's `cargo check` stays minimal.

[lints]
workspace = true
