[package]
name = "safi-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
rust-version.workspace = true

[lib]
name = "safi_ui"
path = "src/lib.rs"

[features]
default = []
dev = ["hot-reload"]
hot-reload = []
# Pulls in sdl3 + the `SdlGpuRenderer` impl. Off by default so host CI stays
# free of native deps; device-build jobs (Android/iOS) opt in. See todo 09.
gpu = ["dep:sdl3"]
# Pulls in sdl3 + enables the `safi_ui::app::App` runtime entry point.
# Every example app and consumer crate opts in to this; host CI does not.
# `runtime` and `gpu` are orthogonal: both reference the same optional sdl3
# dep but only `gpu` triggers the glslc shader build in build.rs.
runtime = ["dep:sdl3"]

[dependencies]
safi-ui-macros = { path = "../safi-ui-macros", version = "0.1.0" }

# Per PRD §15.1 — listed but unused until later todos wire them in.
# Heavy native deps (sdl3) are pulled in via a feature gate in todo 02
# (SDL3 window) to keep `cargo check` host-portable for todo 00.
taffy     = "0.4"
fontdue   = "0.8"
rustybuzz = "0.14"
roxmltree = "0.20"
image     = "0.25"
glam      = "0.28"
serde     = { version = "1", features = ["derive"] }
hashbrown = "0.14"

# Only pulled in by `--features gpu` (todo 09). Same build flavour as
# examples/window-smoke: build-from-source so SDL3 ships as its own .so.
sdl3 = { version = "0.18", default-features = false, features = ["build-from-source"], optional = true }

# Android-only: AAssetManager bindings (todo 12). Pulled in unconditionally
# for Android targets — there is no "fall back to filesystem" path on a
# real device, so this is a load-bearing dep, not an optional one.
[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.9"
ndk-sys = "0.6"
# Needed to call `activity.getAssets()` on the Activity jobject SDL3
# hands us, before we convert to an `AAssetManager*` via `ndk-sys`.
jni = "0.21"

# iOS-only: NSBundle + NSData via the modern objc2 stack (todo 12).
# Same rationale as Android — a real iOS build needs Bundle.main access.
[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSBundle", "NSData", "NSURL", "NSString"] }

[dev-dependencies]
proptest = "1"
trybuild = "1"

[lints]
workspace = true
