[package]
name = "safi-ui-window-smoke"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Canonical minimum-viable Safi-UI app — declare a UI tree, ship."
publish = false

[lib]
name = "safi_ui_window_smoke"
crate-type = ["cdylib", "staticlib"]
path = "src/lib.rs"

# The default build is a stub — no SDL3 link, no native deps. The actual
# Android/iOS smoke binary is enabled with `--features device-build`, which
# turns on safi-ui's `runtime` feature. That pulls in sdl3 transitively and
# triggers the SDL3 CMake build (requires NDK on Android or the Xcode
# toolchain on iOS).
#
# CI invokes:
#   cargo ndk -t arm64-v8a build -p safi-ui-window-smoke --features device-build
#   cargo build --target aarch64-apple-ios -p safi-ui-window-smoke --features device-build
#
# Local host runs (`cargo check --workspace`, `cargo clippy`, `cargo test`)
# see only the stub and never reach the SDL3 build script.

[features]
default = []
device-build = ["safi-ui/runtime"]

[dependencies]
# safi-ui's `runtime` feature owns SDL3 — examples don't depend on sdl3
# directly. Likewise no taffy: layout is an engine concern.
safi-ui = { path = "../../safi-ui", default-features = false }

[lints]
workspace = true
